# adaptive_swim_pde

./: README.md  pyproject.toml  requirements.txt
examples/: advection.ipynb  advection_experiment.ipynb  burgers.ipynb  burgers_experiment.ipynb  euler_bernoulli.ipynb  euler_bernoulli_experiment.ipynb  helmholtz.ipynb  helmholtz_experiment.ipynb  utils.py
examples/adaptive_swim_pde/forward/: advection.ipynb  euler_bernoulli.ipynb  helmholtz.ipynb  helmholz_experiment.ipynb  utils.py
examples/data/: bunny_vertices.csv
examples/swim_pde/forward/: advection.ipynb  euler_bernoulli.ipynb  helmholtz.ipynb
examples/swim_pde/inverse/: helmholtz.ipynb  poisson.ipynb
src/adaptive_swim/activation/: __init__.py  a_tanh.py  activations.py  cos.py  rational.py  relu.py  sin.py  tanh.py
src/adaptive_swim/adaptive_solver/: __init__.py  adaptive_solver.py
src/adaptive_swim/ansatz/: __init__.py  basic_ansatz.py  boundary_compliant_ansatz.py  utils.py
src/adaptive_swim/burgers/: __init__.py  burgers_solver.py  domain.py
src/adaptive_swim/swim_backbones/: __init__.py  base.py  dense.py  utils.py
